Fix text breaking out of container at medium breakpoint

--- a/app/assets/stylesheets/revised/pages/landing/_packages.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_packages.scss
@@ -191,7 +191,7 @@ $compare-packages-blue: rgb(19, 71, 106);
       }
       h3 {
         color: $compare-packages-blue;
-        font-size: 50px;
+        font-size: 230%;
         text-align: center;
         line-height: 1;
         margin: 0;
